# multicallcache.py

./: .env_example  .gitignore  Goals.txt  a  pyproject.toml  readMe.md  readme.md  run me to make the db.ipynb  temp.ipynb
examples/: daistats.py  mcd_exporter.py  small_example.py  temp.py
multicall/: __init__.py  cache.py  call copy.py  call.py  constants.py  create_db_if_not_exist.py  fetch_multicall_across_blocks.py  get_multicall_across_blocks.py  multicall copy.py  multicall.py  multicallCache.sqlite  multicallcache.sqlite  rpc_call.py  signature.py  utils.py
multicall_theirs/: __init__.py  cache.py  constants.py  errors.py  multicall.py  old.py
multicallcache/: cache.py  call.py  fetch_multicall_across_blocks.py  multicall.py
playgound/: pull_lots_of_ve_areo_data.ipynb  verifyCallMulitCallAndFetchAndSaveWorkInJupyter.ipynb
profiler/: README.md  bench.py  requirements.txt
tests/: conftest.py  helpers.py  readme.txt  settings.py  test_base.py  test_cache.py  test_call.py  test_calls_with_scale.py  test_constants.py  test_fetch_multicall_accross_blocks.py  test_fetch_multicall_across_blocks.py  test_jupyter.py  test_multicall.py  test_signature.py  verifyCallMulitCallAndFetchAndSaveWorkInJupyter.ipynb
tests/mine/: test_call.py
tests/test_data/: simple_sequential_test_data.csv  simple_sequential_test_data.parquet  test_fetch_save_and_return_data.parquet
tests/theirs/: test_multicall.py  test_signature.py
