[tool.poetry]
name = "multicall"
version = "0.5.1"
description = "aggregate results from multiple ethereum contract calls with local caching"
authors = ["banteg <banteeg@gmail.com>", "parker burchett <parkerburchett@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.29.0"
eth_retry = "0.1.11"
aiohttp = "^3.8.1"
sqlitedict = "^2.1.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.3"
ruff = "^0.1.9"
pytest = "^7.0.0"
flake8 = "^4.0.1"
black = {extras = ["jupyter"], version = "^24.4.2"}
click = "8.0.1"
joblib = "^1.1.0"
aiolimiter = "^1.1.0"
fastparquet = "^2024.2.0"
pytest-asyncio = "^0.23.5"
pyarrow = "^15.0.0"
jupyter = "^1.0.0"
pytest-vscodedebug = "^0.1.0"
plotly = "^5.22.0"
scikit-learn = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

